objects/ProgramFeature__c.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <formula>IF(INCLUDES(FeatureCatalog__r.Category__c, &quot;Content&quot;),&quot;Content&quot;,NULL)+
IF(INCLUDES(FeatureCatalog__r.Category__c, &quot;Opportunity Registration&quot;),&quot;Opportunity Registration&quot;,NULL)+
IF(INCLUDES(FeatureCatalog__r.Category__c, &quot;Demo&quot;),&quot;Demo&quot;,NULL)+
IF(INCLUDES(FeatureCatalog__r.Category__c, &quot;Support&quot;),&quot;Support&quot;,NULL)+
IF(INCLUDES(FeatureCatalog__r.Category__c, &quot;Loyalty&quot;),&quot;Loyalty&quot;,NULL)+
IF(INCLUDES(FeatureCatalog__r.Category__c, &quot;Marketing Tools &amp; Materials&quot;),&quot;Marketing Tools &amp; Materials&quot;,NULL)+
IF(INCLUDES(FeatureCatalog__r.Category__c, &quot;MDF Partner Locator&quot;),&quot;MDF Partner Locator&quot;,NULL)+
IF(INCLUDES(FeatureCatalog__r.Category__c, &quot;Program Eligibility&quot;),&quot;Program Eligibility&quot;,NULL)+
IF(INCLUDES(FeatureCatalog__r.Category__c, &quot;Training&quot;),&quot;Training&quot;,NULL)+
IF(INCLUDES(FeatureCatalog__r.Category__c, &quot;Pricing&quot;),&quot;Pricing&quot;,NULL)+
IF(INCLUDES(FeatureCatalog__r.Category__c, &quot;Discounts/Rebates&quot;),&quot;Discounts/Rebates&quot;,NULL)+
IF(INCLUDES(FeatureCatalog__r.Category__c, &quot;Events&quot;),&quot;Events&quot;,NULL)+
IF(INCLUDES(FeatureCatalog__r.Category__c, &quot;Simple ORF&quot;),&quot;Simple ORF&quot;,NULL) +
IF(INCLUDES(FeatureCatalog__r.Category__c, &quot;Lead Management&quot;),&quot;Lead Management&quot;,NULL) +
IF(INCLUDES(FeatureCatalog__r.Category__c, &quot;Passed to Partner Opportunities&quot;),&quot;Passed to Partner Opportunities&quot;,NULL)</formula>
        <label>Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeactivatedDate__c</fullName>
        <description>used by Feature assignment batch. updated using workflow</description>
        <label>Deactivated Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <formula>FeatureCatalog__r.Description__c</formula>
        <label>Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enabled__c</fullName>
        <formula>TEXT( FeatureCatalog__r.Enabled__c )</formula>
        <label>Enabled</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalApplicationId__c</fullName>
        <description>OCT 13 PRM: External Application Id of a Feature</description>
        <formula>FeatureCatalog__r.ExternalApplicationId__c</formula>
        <label>External Application Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FeatureCatalog__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Feature/Benefit Catalog</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>FeatureCatalog__c.Retired__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>FeatureCatalog__c</referenceTo>
        <relationshipLabel>Program Features</relationshipLabel>
        <relationshipName>ProgramFeatures</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FeatureStatus__c</fullName>
        <label>Feature Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FieloPRM_BadgeFeature__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Badge Feature</label>
        <referenceTo>FieloPRM_BadgeFeature__c</referenceTo>
        <relationshipLabel>Program Features</relationshipLabel>
        <relationshipName>ProgramFeatures</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GlobalProgramFeature__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Global Program Feature</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ProgramFeature__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Global Feature</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ProgramFeature__c</referenceTo>
        <relationshipLabel>Program Features</relationshipLabel>
        <relationshipName>ProgramFeatures</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ModifiablebyCountry__c</fullName>
        <formula>TEXT( ProgramLevel__r.ModifiablebyCountry__c )</formula>
        <label>Modifiable by Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PartnerProgram__c</fullName>
        <label>Partner Program</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>PartnerProgram__c.RecordType.Id</field>
                <operation>equals</operation>
                <value>012Z00000008hCz</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>PartnerProgram__c</referenceTo>
        <relationshipLabel>Program Features</relationshipLabel>
        <relationshipName>ProgramFeatures</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ProgramLevelName__c</fullName>
        <formula>ProgramLevel__r.Name</formula>
        <label>Program Level Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProgramLevel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program Level</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.PartnerProgram__c</field>
                <operation>equals</operation>
                <valueField>ProgramLevel__c.PartnerProgram__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ProgramLevel__c</referenceTo>
        <relationshipLabel>Program Features</relationshipLabel>
        <relationshipName>ProgramFeatures</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProgramType__c</fullName>
        <description>Describes the type of program.</description>
        <formula>PartnerProgram__r.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TECH_FieloFeatureName__c</fullName>
        <formula>FeatureCatalog__r.FieloPRM_Feature__c</formula>
        <label>TECH_FieloFeatureName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TECH_InactiveGlobalFeature__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TECH_InactiveGlobalFeature</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TECH_ProgramAdminEmail__c</fullName>
        <label>TECH_ProgramAdminEmail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>TECH_ProgramApproverEmail__c</fullName>
        <label>TECH_ProgramApproverEmail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>TECH_ProgramOwnerEmail__c</fullName>
        <label>TECH_ProgramOwnerEmail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <description>OCT 13 PRM: Feature URL</description>
        <formula>FeatureCatalog__r.URL__c</formula>
        <label>URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visibility__c</fullName>
        <formula>TEXT( FeatureCatalog__r.Visibility__c )</formula>
        <label>Visibility</label>
        <type>Text</type>
    </fields>
    <label>Program Feature</label>
    <nameField>
        <displayFormat>PF-{00000000}</displayFormat>
        <label>Program Feature ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Program Features</pluralLabel>
    <recordTypes>
        <fullName>CountryFeature</fullName>
        <active>true</active>
        <description>Features related to Country Parter Program</description>
        <label>Country Feature</label>
    </recordTypes>
    <recordTypes>
        <fullName>GlobalFeature</fullName>
        <active>true</active>
        <description>Features related to Global Parter Program</description>
        <label>Global Feature</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>PRF_VR_MAY13PRM01_CheckGlobalFeatureSts</fullName>
        <active>true</active>
        <description>Check if the global feature status is active or not when the child feature is updated to active</description>
        <errorConditionFormula>AND($User.BypassVR__c=False,(IF(
AND(
 GlobalProgramFeature__c  != null ,
NOT( ISPICKVAL(  GlobalProgramFeature__r.FeatureStatus__c  , &apos;Active&apos;) ),
ISPICKVAL(FeatureStatus__c,&apos;Active&apos;),NOT( ISCHANGED( TECH_InactiveGlobalFeature__c ))),true,false)))</errorConditionFormula>
        <errorMessage>Please activate the Parent Feature at Global Level and then try again</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PRF_VR_MAY13PRM02_CheckUserAccess</fullName>
        <active>true</active>
        <description>To check that only Program Owners can create/edit global program features.</description>
        <errorConditionFormula>AND($User.BypassVR__c=False,(IF(
AND(
(
NOT
(OR(
$User.ProgramAdministrator__c ,
$User.ProgramApprover__c , 
$User.ProgramOwner__c
))),
RecordType.Id = $Label.CLMAY13PRM06),
true,
false)))</errorConditionFormula>
        <errorMessage>Only Program Owners/Program Administrators can create/edit global program features.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PRF_VR_MAY13PRM03_CheckParentLevelSts</fullName>
        <active>true</active>
        <description>Feature can be activated only if the parent Level is active.</description>
        <errorConditionFormula>AND($User.BypassVR__c=False,(IF(
AND(
 ProgramLevel__c  != null ,
NOT( ISPICKVAL(  ProgramLevel__r.LevelStatus__c  , &apos;Active&apos;) ),
ISPICKVAL( FeatureStatus__c ,&apos;Active&apos;)),true,false)))</errorConditionFormula>
        <errorMessage>Please activate the Parent Level and then try again</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PRF_VR_MAY13PRM04_CantChangeLevelFeature</fullName>
        <active>true</active>
        <description>For May 13 PRM release
Feature Catalog and Program Level cannot be updated</description>
        <errorConditionFormula>AND($User.BypassVR__c=False,(IF(
AND(
OR(
ISCHANGED( ProgramLevel__c ) ,
ISCHANGED( FeatureCatalog__c )),
OR(
$User.ProgramManager__c ,
$User.ProgramOwner__c )


),
true,false
)))</errorConditionFormula>
        <errorMessage>Feature catalog or program level cannot be edited. Please inactivate this feature and assign a new one with the right Feature and/or Program Level selection</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PRF_VR_OCT14PRM01_CheckGlobalProgramOwnr</fullName>
        <active>true</active>
        <description>To check whether the user is global program owner.</description>
        <errorConditionFormula>AND($User.BypassVR__c=False,(IF(
AND(
(
NOT
(OR(
$User.ProgramAdministrator__c ,
$User.ProgramApprover__c , 
 AND($User.ProgramOwner__c, 
     $User.Id  =   PartnerProgram__r.OwnerId)
))),
RecordType.Id = $Label.CLMAY13PRM06),
true,
false)))</errorConditionFormula>
        <errorMessage>Only Global Program owners can create/edit global program features.</errorMessage>
    </validationRules>
</CustomObject>